--- a/Option1/Jenkinsfile
+++ b/Option1/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
     stage('Install dependencies') {
       steps {
         
-        sh 'npm install npm@latest -g'
+        sh 'npm install'
       }
     }
      
