--- a/Option1/Jenkinsfile
+++ b/Option1/Jenkinsfile
@@ -8,25 +8,20 @@ pipeline {
     stage('Cloning Git') {
       steps {
         git 'https://github.com/asrilu448/Lvl3.git'
+        
       }
     }
         
     stage('Install dependencies') {
       steps {
-        
-        sh 'npm install'
+        sh 'cd ./Option1 && npm install'
       }
     }
      
     stage('Test') {
       steps {
-         
-         sh 'npm test'
+         sh 'cd ./Option1 && npm test'
       }
     }      
   }
 }
-
-
-
-
